hphp/hack/test/typecheck/new_inference/fst_then_invoke_bad2.php.like_types.exp
File "fst_then_invoke_bad2.php", line 24, characters 16-17:
Invalid argument (Typing[4110])
File "fst_then_invoke_bad2.php", line 18, characters 23-31:
Expected ~Contra<[unresolved]> because it is an unenforceable type
File "fst_then_invoke_bad2.php", line 22, characters 20-28:
But got Contra<D>
